--- a/config.yml
+++ b/config.yml
@@ -15,6 +15,7 @@ cli:
   node: CronNode,ProfileInspect
   timer:
     sysTask: '*/10 * * * *'
+    profileInspect: '*/1 * * * *'
   nacos:
     addr: http://localhost:8848/nacos
     nameSpace: test
